k8s-azure/traefik/7.traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: aar-kubeadm-master.northeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port: 
              number: 81
      - path: /dash
        pathType: Prefix
        backend:
          service:
            name: traefik-dash-ui
            port: 
              number: 81
  - host: aar-kubeadm-worker-1.northeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port: 
              number: 81
      - path: /dash
        pathType: Prefix
        backend:
          service:
            name: traefik-dash-ui
            port: 
              number: 81
